Add FlowRouter to our little scheme

--- a/client/view/main/home.html
+++ b/client/view/main/home.html
@@ -1,1 +1,7 @@
-
+<template name="home">	
+		{{#if currentUser}}
+			{{> userIsLoggedOn}}
+		{{else}}
+			{{> userIsNotLoggedOn}}
+		{{/if}}  	
+</template>
