Add structure for specific twit page (FlowRouter)

--- a/client/view/main/twit/twit.html
+++ b/client/view/main/twit/twit.html
@@ -3,5 +3,8 @@
 -->
 
 <template name="twit">
-	<a href="/twit/{{_id}}">{{twit}}</a>
+	{{#with getTwit}}	
+		<h1>{{twit}}</h1>
+		<h3>by {{user}}</h3>
+	{{/with}}
 </template>
