--- a/client/view/tweeter.html
+++ b/client/view/tweeter.html
@@ -4,7 +4,7 @@
 	<title>Tweeter</title>
 </head>
 <body>
-	navigation
+	<a href="/">home</a>
 	{{>Template.dynamic template=content}}
 </body>
 </template>
