--- a/client/view/main/wall.html
+++ b/client/view/main/wall.html
@@ -1,7 +1,7 @@
 <template name="wall">
 	<ul>
 	{{#each twits}}
-		<li><a href="/twit/{{_id}}">{{twit}}</a></li>
+		<li><a href="/twit/{{_id}}">{{twit}}</a> by <a href="/{{user}}">{{#with getUser user}}{{username}}{{/with}}</a></li>
 	{{/each}}
 	</ul>
 </template>
