Add follow functionality
Add a mongodb collection for follow data for each user. This document gets added automatically whenever a user is created. When a user follows or unfollows another user, this will get documented in this Collection. Next step is to document it in the subject user.

--- a/client/view/main/user/user.html
+++ b/client/view/main/user/user.html
@@ -1,6 +1,10 @@
 <template name="user">
 	{{#with getUser}}
 		{{username}}
-		<button id="follow">follow</button>
+		{{#if userIsFollowing}}
+			<button id="unFollow">unfollow</button>
+		{{else}}
+			<button id="follow">follow</button>			
+		{{/if}}
 	{{/with}}
 </template>
