Complete User page with Twits
The user page now displays the twits composed by the specific user.

PS: don't mind all the uglyness, first, I'm trying to connect all the tweety dots

--- a/client/view/main/twit/twit.html
+++ b/client/view/main/twit/twit.html
@@ -1,10 +1,14 @@
-<!--
-	This is meant for a general purpose Twit, please keep in mind that the to-display Twit should be resided in the Data Context of this template.
--->
-
 <template name="twit">
 	{{#with getTwit}}	
 		<h1>{{twit}}</h1>
 		<h3>by {{user}}</h3>
 	{{/with}}
+</template>
+
+<!--
+	This is meant for a general purpose Twit, please keep in mind that the to-display Twit should be resided in the Data Context of this template.
+-->
+<template name="genericTwit">
+	<h1>{{twit}}</h1>
+	<h3>by {{user}}</h3>
 </template>
