Add momentjs and TTL in mongodb
Still contains bugs but getting close

--- a/client/view/main/user/user.html
+++ b/client/view/main/user/user.html
@@ -8,8 +8,8 @@
 		{{/if}}
 
 		<ul>
-			{{#each twitFromUser in getUsersTwits}}
-				<li>{{>genericTwit twitFromUser}}</li>
+			{{#each twit in getUsersTwits}}
+				<li>{{>genericTwit twit}}</li>
 			{{/each}}
 		</ul>
 	{{/with}}	
