Refactor to meteor 1.3 recommended file structure
This commit handles issue #1 concerning the proposition of the recommended meteor 1.3 file structure.

Since this is the first refactor, tips are always welcome (especially concerning the import locations since this would be the first time I ever had to take these into account when developing in Meteor)

--- a/imports/ui/components/loggedon/loggedon.html
+++ b/imports/ui/components/loggedon/loggedon.html
@@ -2,3 +2,9 @@
 	<p>The user is not logged on</p>
 	{{> loginButtons}}
 </template>
+
+<template name="userIsLoggedOn">
+	{{> loginButtons}}
+	{{> twitbox}}
+	{{> wall}}
+</template>
