--- a/imports/ui/components/twit/twit.html
+++ b/imports/ui/components/twit/twit.html
@@ -19,3 +19,14 @@
 		<button id="retwit">retwit</button>
 	{{/if}}
 </template>
+
+<!--
+	This is meant for a general purpose Twit, please keep in mind that the to-display Twit should be resided in the Data Context of this template.
+-->
+<template name="miniTwit">
+	<a href="/{{user}}">{{#with getUser user}}{{username}}{{/with}}</a>
+	<a href="/twit/{{_id}}">{{twit}}</a>
+	<p>tweeted on: {{date}}</p>
+	<p>retwitted {{amountOfRetwits}} times</p>
+	<p>{{amountOfLikes}} likes</p>
+</template>
