--- a/imports/ui/components/twit/twit.html
+++ b/imports/ui/components/twit/twit.html
@@ -18,6 +18,12 @@
 	{{else}}
 		<button id="retwit">retwit</button>
 	{{/if}}
+
+	{{#if isLiked}}
+		<button id="deLike">delike</button>
+	{{else}}
+		<button id="like">like</button>
+	{{/if}}
 </template>
 
 <!--
