--- a/imports/ui/components/wall/wall.html
+++ b/imports/ui/components/wall/wall.html
@@ -1,7 +1,7 @@
 <template name="wall">
-	<ul>
+	<div class="ui cards">
 	{{#each twitData in twits}}
 		{{> miniTwit twitData}}
 	{{/each}}
-	</ul>
+	</div>
 </template>
